--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,8 +6,9 @@
     </h2>
     <span class="spacer"></span>
     <div class="right-section">
-      <a routerLink="/contact" routerLinkActive="active">Gaurav Tandon
-        <br>+91-9888213040</a>
+        <img src="../../assets/images/globeBooks.png" class="img-fluid rightLogo float-right" alt="">
+      <!-- <a routerLink="/contact" routerLinkActive="active">Gaurav Tandon
+        <br>+91-9888213040</a> -->
     </div>
 
   </div>
