--- a/src/app/inquiry/inquiry.component.html
+++ b/src/app/inquiry/inquiry.component.html
@@ -52,7 +52,7 @@
             <h5><b>Name:</b> {{submittedForm.name}}</h5>
             <h5><b>Email:</b> {{submittedForm.email}}</h5>
             <h5><b>Phone:</b> {{submittedForm.phone}}</h5>
-            <h5><b>Size:</b> {{submittedForm.destination}}</h5>
+            <h5><b>Destination:</b> {{submittedForm.destination}}</h5>
             <h5><b>Date:</b> {{submittedForm.date | date}}</h5>
             <h5><b>Comments:</b> {{submittedForm.comments}}</h5>
           </div>
