enterprise updated to show correct name i.e. enterprises

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row contact">
     <div class="col">
-      <h3>CityMax Enterprise</h3>
+      <h3>CityMax Enterprises</h3>
       <div class="title">
         <h5>Gaurav Tandon</h5>
         <span>Co-Founder</span>
