--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="row first-row">
     <h2>
       <a routerLink="/" routerLinkActive="active">CitiMax
-        <br>Enterprise</a>
+        <br>Enterprises</a>
     </h2>
     <span class="spacer"></span>
     <div class="right-section">
