--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <h3>CityMax Enterprise</h3>
+      <h3>CityMax Enterprises</h3>
       <p>A unit of CityMax Travel &amp; Education Services</p>
     </div>
     <div class="col-12">
