--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -10,5 +10,9 @@
 .contact {
     padding: 50px 10px;
     text-align: center;
-    background: linear-gradient(to bottom, #881b0f, white, #881b0f);
+    background: bisque;
+}
+
+h3 {
+    color: #3f51b5;
 }
