email address parameterized

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -13,7 +13,7 @@
         <span  *ngFor='let phone of phones'>
             Ph: <a href="tel:{{phone}}">{{phone}}</a> <br>
         </span>
-        <a href="mailto:citimaxenterprises@gmail.com">citimaxenterprises@gmail.com</a>
+        <a href="mailto:{{email}}">{{email}}</a>
       </p>
 
     </div>
