added route for newzealand and australia colleges page

--- a/src/app/studies/studies.component.html
+++ b/src/app/studies/studies.component.html
@@ -2,7 +2,8 @@
   <div class="row">
     <div class="col">
       <h3>Colleges &amp; Universities in {{ getCountry() | titlecase }}</h3>
-      <p>We are the leading Education agent since the year 1995 with a benchmark of recruiting a huge number of student to various canadian institutes . We represent the following Universities &amp; Colleges in Canada.</p>
+      <p>We are the leading Education agent since the year 1995 with a benchmark of recruiting a huge number of student to various {{getCountry() | titlecase}} institutes . 
+        We represent the following Universities &amp; Colleges in {{getCountry() | titlecase}}.</p>
     </div>
   </div>
   <div class="row">
