about us component added

--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -15,9 +15,11 @@
         <mat-card-content>
           <p>{{course.description}}</p>
         </mat-card-content>
-        <mat-card-actions>
-          <button routerLink='/{{course.id}}' routerLinkActive="active" mat-button>DETAILS</button>
-          <button mat-button>SHARE</button>
+        <mat-card-actions align='center'>
+          <!-- <button mat-button>SHARE</button> -->
+          <button routerLink='/{{course.id}}' routerLinkActive="active" mat-raised-button color="primary">
+            DETAILS
+          </button>
         </mat-card-actions>
       </mat-card>
 
