--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,20 @@
-<div class="container-fluid footer">
-  <div class="row">
+<div class="container-fluid ">
+  <div class="row footer">
     <div class="col links"> |
       <div *ngFor='let link of links'>
-          <a routerLink={{link.hyperlink}} routerLinkActive="active">{{link.name}}</a> |
+        <a routerLink={{link.hyperlink}} routerLinkActive="active">{{link.name}}</a> |
       </div>
+    </div>
+  </div>
+  <div class="row copyright">
+    <div class="col">
+      Copyright &copy; {{app}} {{getYear()}}
+      <br/> Built with 💖 by
+      <u>
+        <a id="footer-email" [href]='email'>
+          {{app}}
+        </a>
+      </u> Students Club.
     </div>
   </div>
 </div>
