carousel component added

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,7 +11,7 @@
       Copyright &copy; {{app}} {{getYear()}}
       <br/> Built with 💖 by
       <u>
-        <a id="footer-email" [href]='email'>
+        <a id="footer-email" href="mailto:{{email}}">
           {{app}}
         </a>
       </u> Students Club.
