--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -8,10 +8,13 @@
       </div>
       <p>
         <span *ngFor='let adrs of address'>
-          {{adrs}} <br>
+          {{adrs}}
+          <br>
         </span>
-        <span  *ngFor='let phone of phones'>
-            Ph: <a href="tel:{{phone}}">{{phone}}</a> <br>
+        <span *ngFor='let phone of phones'>
+          Ph:
+          <a href="tel:{{phone}}">{{phone}}</a>
+          <br>
         </span>
         <a href="mailto:{{email}}">{{email}}</a>
       </p>
@@ -21,7 +24,7 @@
   <div class="row">
     <div class="col">
       <div class="google-maps">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2896.45764142941!2d-80.4946381845088!3d43.451042079128726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882bf4f36b2da269%3A0xe24562dfa877521b!2s183+King+St+W%2C+Kitchener%2C+ON+N2G+1A7!5e0!3m2!1sen!2sca!4v1527865612018"
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13626.027609155175!2d75.4005254!3d31.3725837!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x635ffc3ebf72dd53!2sBawa-Lalvani+Public+School!5e0!3m2!1sen!2sca!4v1531670869667"
           width="100%" height="100%" allowfullscreen>
         </iframe>
       </div>
