--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,6 +4,7 @@
       <h3>CityMax Enterprises</h3>
       <p>A unit of CityMax Travel &amp; Education Services</p>
     </div>
+    <app-carousel></app-carousel>
     <div class="col-12">
       <p>
         We were established in the year 2018 and is pioneer and leaders in Punjab state, India for referring students all across
