name fixed and co founder added

--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -8,7 +8,7 @@
     <div class="col">
       <p>{{header}}</p>
       <div class="image">
-        <img [src]='img' alt="About CityMax Enterprises">
+        <img [src]='img' alt="About CitiMax Enterprises">
       </div>
       <p class="description" *ngFor='let desc of description'>
         {{desc}}
