--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <h3>CityMax Enterprises</h3>
-      <p>A unit of CityMax Travel &amp; Education Services</p>
+      <h3>CitiMax Enterprises</h3>
+      <p>A unit of CitiMax Travel &amp; Education Services</p>
     </div>
     <app-carousel></app-carousel>
     <div class="col-12">
