--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,9 +1,13 @@
-<div class="container-fluid">
-  <div class="row contact">
+<div class="container-fluid contact">
+  <div class="row">
     <div class="col">
-      <h3>{{companyName}}</h3>
+        <h3>{{companyName}}</h3>
+    </div>
+  </div>
+  <div class="row contact">
+    <div class="col" *ngFor='let founder of founders'>
       <div class="title">
-        <h5>{{founder}}</h5>
+        <h5>{{founder.name}}</h5>
         <span>Co-Founder</span>
       </div>
       <p>
@@ -11,9 +15,9 @@
           {{adrs}}
           <br>
         </span>
-        <span class='phone' *ngFor='let phone of phones'>
+        <span class='phone'>
           Ph:
-          <a href="tel:{{phone}}">{{phone}}</a>
+          <a href="tel:{{founder.phone}}">{{founder.phone}}</a>
           <br>
         </span>
         <a class='email' href="mailto:{{email}}">{{email}}</a>
