--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,16 +6,13 @@
     </h2>
     <span class="spacer"></span>
     <div class="right-section">
-        <img src="../../assets/images/globeBooks.png" class="img-fluid rightLogo float-right" alt="">
+      <img src="../../assets/images/globeBooks.png" class="img-fluid rightLogo float-right" alt="">
     </div>
 
   </div>
   <div class="row second-row">
-    <a routerLink="/" routerLinkActive="active">Home
+    <a *ngFor='let route of routes' [routerLink]='route.routeLink' routerLinkActive="active">{{route.routeName}}
       <span class="sr-only">(current)</span>
     </a>
-    <a routerLink="/courses" routerLinkActive="active">Courses</a>
-    <a routerLink="/inquiry" routerLinkActive="active">Inquiry</a>
-    <a routerLink="/contact" routerLinkActive="active">Contact Us</a>
   </div>
 </div>
