--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -18,7 +18,7 @@
         <mat-card-actions align='center'>
           <!-- <button mat-button>SHARE</button> -->
           <button routerLink='/{{course.id}}' routerLinkActive="active" mat-raised-button color="primary">
-            DETAILS
+            {{buttonName}}
           </button>
         </mat-card-actions>
       </mat-card>
