--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,13 +6,13 @@
     </h2>
     <span class="spacer"></span>
     <div class="right-section">
-      <img src="../../assets/images/globeBooks.png" class="img-fluid rightLogo float-right" alt="">
+      <img [src]='rightLogo' class="img-fluid rightLogo float-right" alt="CitiMax">
     </div>
 
   </div>
   <div class="row second-row">
-    <a *ngFor='let route of routes' [routerLink]='route.routeLink' routerLinkActive="active">{{route.routeName}}
-      <span class="sr-only">(current)</span>
+    <a *ngFor='let route of routes' [routerLink]='route.routeLink' routerLinkActive="active">
+      {{route.routeName}}
     </a>
   </div>
 </div>
