--- a/src/app/inquiry/inquiry.component.html
+++ b/src/app/inquiry/inquiry.component.html
@@ -7,16 +7,17 @@
 
         <form class="checkout-form" (ngSubmit)="onSubmit(f)" #f="ngForm">
 
-          <mat-form-field class="full-width">
-            <input ngModel name="name" minlength="3" matInput placeholder="Your Name" required>
+          <mat-form-field class="full-width name">
+            <input ngModel name="name" minlength="3" autocomplete='name' matInput placeholder="Your Name" required>
           </mat-form-field>
 
           <mat-form-field class="full-width">
-            <input class="form-control" ngModel name="email" type="email" matInput placeholder="Email" required email pattern="[a-zA-Z0-9.-_]{1,}@[a-zA-Z.-]{2,}[.]{1}[a-zA-Z]{2,}">
+            <input class="form-control" ngModel name="email" autocomplete='email' type="email" matInput placeholder="Email" required
+              email pattern="[a-zA-Z0-9.-_]{1,}@[a-zA-Z.-]{2,}[.]{1}[a-zA-Z]{2,}">
           </mat-form-field>
 
           <mat-form-field class="full-width">
-            <input ngModel type="tel" name="phone" minlength="10" matInput placeholder="Phone" required>
+            <input ngModel type="tel" name="phone" autocomplete='tel-national' minlength="10" matInput placeholder="Phone" required>
           </mat-form-field>
 
           <mat-form-field class="full-width">
