title added for google map iframe

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -28,7 +28,7 @@
   <div class="row">
     <div class="col">
       <div class="google-maps">
-        <iframe [src]='sanitizer.bypassSecurityTrustResourceUrl(gMapId)' width="100%" height="100%" allowfullscreen>
+        <iframe [src]='sanitizer.bypassSecurityTrustResourceUrl(gMapId)' title="google-maps" width="100%" height="100%" allowfullscreen>
         </iframe>
       </div>
     </div>
