--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -1,79 +1,68 @@
-.checkout-form {
-    min-width: 150px;
-    max-width: 80vh;
-    width: 100%;
-  }
-  
-  .full-width {
-    width: 100%;
-  }
-  
-  .reservation{
-      margin: 20px 10px;
-      display: flex;
-      justify-content: center;
-  }
-
-  .container{
-    padding: 0px;
-    text-align: center;
+.full-width {
+  width: 100%;
 }
 
-h3{
+.container {
+  padding: 0px;
+  display: flex;
+  justify-content: center;
+}
+
+h3 {
   text-align: center;
   color: #3f51b5;
 }
 
-.thanks{
+.thanks {
   width: 100%;
 }
 
-.details{
+.details {
   text-align: justify;
   color: #1b5069;
 }
 
 .message-group {
-    display: flex;
+  display: flex;
 }
 
 .user-message-img {
-    align-self: center;
-    padding: 5px;
-    display: inline-block;
+  align-self: center;
+  padding: 5px;
+  display: inline-block;
 }
 
 .user-message {
-    text-align: center;
-    color : white;
-    border-radius: 20px;
-    padding: 10px;
-    margin: 10px;
-    background-color: rgb(63, 81, 181);
+  text-align: center;
+  color: white;
+  border-radius: 20px;
+  padding: 10px;
+  margin: 10px;
+  background-color: rgb(63, 81, 181);
 }
 
 .bot-message {
-    text-align: center;
-    color : white;
-    border-radius: 20px;
-    padding: 10px;
-    margin: 10px;
-    background-color: rgb(178, 34, 34);
+  text-align: center;
+  color: white;
+  border-radius: 20px;
+  padding: 10px;
+  margin: 10px;
+  background-color: rgb(178, 34, 34);
 }
 
 .img-user {
-    height: 50px;
-    width: 50px;
-    display: inline-block;
-    content: url("http://icons.iconarchive.com/icons/mirella-gabriele/valentine/256/Music-Heart-icon.png");
-  }
+  height: 50px;
+  width: 50px;
+  display: inline-block;
+  content: url("http://icons.iconarchive.com/icons/mirella-gabriele/valentine/256/Music-Heart-icon.png");
+}
 
 .img-bot {
-    height: 50px;
-    width: 50px;
-    display: inline-block;
-    content: url("https://citimaxenterprises.com/globeBooks.0584de1d0328b2a550b3.png");
-  }
+  height: 50px;
+  width: 50px;
+  display: inline-block;
+  content: url("https://citimaxenterprises.com/globeBooks.0584de1d0328b2a550b3.png");
+}
 
 .user-block {
   display: flex;
@@ -93,4 +82,20 @@ mat-card {
   overflow-y: scroll;
   display: flex;
   flex-direction: column;
+}
+
+#chat-title {
+  background-color: black;
+  color: white;
+  padding: 5px;
+  border-radius: 5px;
+  margin-bottom: 25px;
+}
+
+.user-input {
+  display: flex;
+}
+
+mat-form-field {
+  width: 80%;
 }
