--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,37 +1,39 @@
 <div class="container">
 
-  <div class="row reservation">
-    <div class="col-md-8">
-        <mat-card>
-            <div>
-              <h3>Chat with us</h3>
-      
-              <form class="chat-form" (ngSubmit)="onSubmit(f)" #f="ngForm">
-                <div #scrollMe class="chat-box">
-                  <div  class='message-block' *ngFor='let message of chatMessages; let last = last'>
-                    <div class='message-group'>
-                      <div [class]="message.msgFrom == 'user' ? 'user-block' : 'bot-block' ">
-                        <img [class]="message.msgFrom == 'user' ? 'img-user' : 'img-bot' " [alt]="message.msgFrom == 'user' ? 'User' : 'Bot' " />
-                        <div [class]="message.msgFrom == 'user' ? 'user-message' : 'bot-message' ">
-                          {{message.msg}}
-                          {{last ? scrollToBottom() : ''}}
-                        </div>
-                      </div>
-                    </div>
+  <div class="col-md-8">
+    <mat-card>
+      <div>
+        <h3 id="chat-title">Chat with us</h3>
+
+        <form class="chat-form" (ngSubmit)="onSubmit(f)" #f="ngForm">
+          <div #scrollMe class="chat-box">
+            <div class='message-block' *ngFor='let message of chatMessages; let last = last'>
+              <div class='message-group'>
+                <div [class]="message.msgFrom == 'user' ? 'user-block' : 'bot-block' ">
+                  <img [class]="message.msgFrom == 'user' ? 'img-user' : 'img-bot' " [alt]="message.msgFrom == 'user' ? 'User' : 'Bot' " />
+                  <div [class]="message.msgFrom == 'user' ? 'user-message' : 'bot-message' ">
+                    {{message.msg}} {{last ? scrollToBottom() : ''}}
                   </div>
                 </div>
-      
-                <input ngModel name="msg" matInput autocomplete='msg' placeholder="Enter your message" required>
-      
-                <button type="submit" color="primary">
-                  Submit
-                </button>
-              </form>
-      
+              </div>
             </div>
-      
-          </mat-card>
-    </div>
+          </div>
+          <div class="user-input">
+            <mat-form-field>
+              <textarea ngModel name="msg" minRows="5" matInput autocomplete='msg' placeholder="Enter your message" required></textarea>
+            </mat-form-field>
+
+            <button type="submit" mat-button color="primary">
+              Send
+              <mat-icon>send</mat-icon>
+            </button>
+          </div>
+
+        </form>
+
+      </div>
+
+    </mat-card>
   </div>
 
 </div>
