--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid sticky header">
   <div class="row first-row">
-    <h2>
+    <h2 id="logo-name">
       <a routerLink="/" routerLinkActive="active">CitiMax
         <br>Enterprises</a>
     </h2>
