--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <div class="col-md-8">
+  <div class="col-md-8 chat-col">
     <mat-card>
       <div>
         <h3 id="chat-title">Chat with us</h3>
