--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -36,6 +36,11 @@ a {
   max-height: 30vh; 
 }
 
+#logo-name {
+  animation-name: moveInRight;
+  animation-duration: 3s;
+}
+
 .right-section{
   text-align: center;
   max-height: 15vh;
@@ -43,4 +48,34 @@ a {
 
 .rightLogo {
   max-height: 100%;
+  animation-name: moveInLeft;
+  animation-duration: 3s;
+}
+
+@keyframes moveInLeft {
+  0%{
+    opacity: 0;
+    transform: translateX(-60px);
+  }
+  80%{
+    transform: translateX(10px);
+  }
+  100%{
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+@keyframes moveInRight {
+  0%{
+    opacity: 0;
+    transform: translateX(10px);
+  }
+  80%{
+    transform: translateX(-10px);
+  }
+  100%{
+    opacity: 1;
+    transform: translate(0);
+  }
 }
