fixed reset validation bug

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -20,7 +20,7 @@
           </div>
           <div class="user-input">
             <mat-form-field>
-              <textarea ngModel name="msg" minRows="5" matInput autocomplete='msg' placeholder="Enter your message" required></textarea>
+              <textarea ngModel name="msg" cdkTextareaAutosize matInput autocomplete='msg' placeholder="Enter your message" required></textarea>
             </mat-form-field>
 
             <button type="submit" mat-button color="primary">
