--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -4,15 +4,19 @@
 }
 
 .title {
-    padding: 20px 10px;
+    padding: 0px 10px 20px 10px;
 }
 
 .contact {
-    padding: 50px 10px;
+    padding: 50px 0px;
     text-align: center;
-    background: bisque;
 }
 
 h3 {
     color: #3f51b5;
+}
+
+mat-card {
+    background-color: blanchedalmond;
+    margin-bottom: 10px;
 }
