--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,30 +1,36 @@
 <div class="container-fluid contact">
+
   <div class="row">
     <div class="col">
-        <h3>{{companyName}}</h3>
+      <h3>{{companyName}}</h3>
     </div>
   </div>
+
   <div class="row contact">
     <div class="col" *ngFor='let founder of founders'>
-      <div class="title">
-        <h5>{{founder.name}}</h5>
-        <span>Co-Founder</span>
-      </div>
-      <p>
-        <span class='address' *ngFor='let adrs of address'>
-          {{adrs}}
-          <br>
-        </span>
-        <span class='phone'>
-          Ph:
-          <a href="tel:{{founder.phone}}">{{founder.phone}}</a>
-          <br>
-        </span>
-        <a class='email' href="mailto:{{email}}">{{email}}</a>
-      </p>
-
+      <mat-card>
+        <div class="title">
+          <h5>{{founder.name}}</h5>
+          <span>Co-Founder</span>
+        </div>
+        <p>
+          <span class='address' *ngFor='let adrs of address'>
+            {{adrs}}
+            <br>
+          </span>
+          <span class='phone'>
+            Ph:
+            <a href="tel:{{founder.phone}}">{{founder.phone}}</a>
+            <br>
+          </span>
+          <a class='email' href="mailto:{{email}}">{{email}}</a>
+        </p>
+      </mat-card>
     </div>
   </div>
+
+  <app-chat></app-chat>
+
   <div class="row">
     <div class="col">
       <div class="google-maps">
@@ -33,5 +39,5 @@
       </div>
     </div>
   </div>
-  <app-chat></app-chat>
+
 </div>
