--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -11,7 +11,7 @@ h3 {
 }
 
 .padding {
-    padding: 20px;
+    padding: 5px;
     display: grid;
     justify-content: center;
 }
@@ -21,5 +21,6 @@ mat-icon {
 }
 
 mat-card {
-    background-color: wheat;
+    background-color: blanchedalmond;
+    padding-top: 0px;
 }
