--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,10 @@
 <div class="container-fluid sticky header">
-  <div class="row first-row">
+  <div id="first-row" class="row first-row">
     <h2 id="logo-name">
-      <a routerLink="/" routerLinkActive="active">CitiMax
-        <br>Enterprises</a>
+      <a id="brand" routerLink="/" routerLinkActive="active">
+        <span>CitiMax </span>
+        <span>Enterprises</span>
+      </a>
     </h2>
     <span class="spacer"></span>
     <div class="right-section">
