--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="container contact">
+<div class="container">
 
   <div class="row">
     <div class="col">
@@ -29,7 +29,12 @@
     </div>
   </div>
 
-  <app-chat></app-chat>
+  <div class="row chat">
+    <div class="col-md-8 chat-col">
+      <app-chat></app-chat>
+    </div>
+  </div>
+  
 
   <div class="row">
     <div class="col">
