--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,20 +1,25 @@
-<div class="container-fluid sticky header">
-  <div id="first-row" class="row first-row">
+<header class="container-fluid sticky header">
+  <div id="first-row" class="first-row expand">
     <h2 id="logo-name">
       <a id="brand" routerLink="/" routerLinkActive="active">
-        <span>CitiMax </span>
-        <span>Enterprises</span>
+        <span>CitiMax </span> <span>Enterprises</span>
       </a>
     </h2>
-    <span class="spacer"></span>
     <div class="right-section">
-      <img [src]='rightLogo' class="img-fluid rightLogo float-right" alt="CitiMax">
+      <img
+        [src]="rightLogo"
+        class="img-fluid rightLogo float-right"
+        alt="CitiMax"
+      />
     </div>
-
   </div>
   <div class="row second-row">
-    <a *ngFor='let route of routes' [routerLink]='route.routeLink' routerLinkActive="active">
-      {{route.routeName}}
+    <a
+      *ngFor="let route of routes"
+      [routerLink]="route.routeLink"
+      routerLinkActive="active"
+    >
+      {{ route.routeName }}
     </a>
   </div>
-</div>
+</header>
