--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -1,28 +1,32 @@
-.google-maps{
-    height: 70vh;
-    margin: 20px 0px;
+.google-maps {
+  height: 70vh;
+  margin: 20px 0px;
 }
 
 .title {
-    padding: 0px 10px 20px 10px;
+  padding: 0px 10px 20px 10px;
 }
 
 .contact {
-    padding: 50px 0px;
-    text-align: center;
+  padding: 50px 0px;
+  text-align: center;
 }
 
 h3 {
-    margin-top: 50px;
-    text-align: center;
-    color: #3f51b5;
+  margin-top: 50px;
+  text-align: center;
+  color: #3f51b5;
 }
 
 mat-card {
-    background-color: blanchedalmond;
-    margin-bottom: 10px;
+  background-color: blanchedalmond;
+  margin-bottom: 10px;
+}
+
+.noPadding {
+  padding: 0px;
 }
 
 .chat {
-    justify-content: center;
+  justify-content: center;
 }
