Display header image as inline block

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -110,7 +110,7 @@ a:hover {
     display: none;
   }
   .expand img {
-    display: inline;
+    display: inline-block;
   }
   h2 {
     font-size: 30px;
