--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -52,7 +52,7 @@ a:hover {
 }
 
 .expand {
-  padding: 25px;
+  margin: auto;
 }
 
 #logo-name {
@@ -61,6 +61,7 @@ a:hover {
 }
 
 .right-section {
+  display: none;
   max-height: 90%;
   text-align: center;
 }
@@ -68,7 +69,7 @@ a:hover {
 .rightLogo {
   max-height: 90%;
   animation-name: moveInLeft;
-  animation-duration: 1s;
+  animation-duration: 2s;
 }
 
 @keyframes moveInLeft {
@@ -106,12 +107,7 @@ a:hover {
   .expand {
     justify-content: space-between;
   }
-  .first-row img {
-    display: none;
-  }
-  .expand img {
-    display: inline-block;
-  }
+
   h2 {
     font-size: 30px;
   }
