--- a/src/app/home/carousel/carousel.component.html
+++ b/src/app/home/carousel/carousel.component.html
@@ -1,19 +1,19 @@
 <div id="carousel" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" 
-        src="https://www.freewebheaders.com/wordpress/wp-content/gallery/landmarks-monuments/hampton-court-palace-london-uk-header.jpg" alt="First slide">
-      </div>
-      <div class="carousel-item" *ngFor='let img of images'>
-        <img class="d-block w-100" [src]='img' alt="Second slide">
-      </div>
-      <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" 
+      src="../../../assets/images/carousel/plane-take-off-start-point-header-min.jpg" alt="Plane take off">
     </div>
+    <div class="carousel-item" *ngFor='let img of images'>
+      <img class="d-block w-100" [src]='img' alt="Second slide">
+    </div>
+    <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
   </div>
+</div>
