Class added for responsive image

--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -8,7 +8,7 @@
     <div class="col">
       <p>{{header}}</p>
       <div class="image">
-        <img [src]='img.src' [alt]='img.alt'>
+        <img [src]='img.src' class="img-fluid" [alt]='img.alt'>
       </div>
       <p class="description" *ngFor='let desc of description'>
         {{desc}}
