--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,6 +4,7 @@
       <div *ngFor='let link of links'>
         <a routerLink={{link.hyperlink}} routerLinkActive="active">{{link.name}}</a> |
       </div>
+      <a class="signin" routerLink='/signin' (click)='loginState()' routerLinkActive="active">{{signInState}}</a>
     </div>
   </div>
   <div class="row copyright">
