Admin chat component added

--- a/src/app/chat/admin-chat/admin-chat.component.css
+++ b/src/app/chat/admin-chat/admin-chat.component.css
@@ -1,22 +1,26 @@
 .container {
   text-align: center;
-  margin: 5px;
   max-width: 1500px !important;
 }
 
 .chats {
   display: flex;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .sessions {
-  max-width: 30%;
+  display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  max-width: 30%;
 }
 
 .session {
-    padding: 5px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  padding: 5px;
+  margin: 2px;
+  height: fit-content;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .chat {
@@ -29,6 +33,9 @@ span {
 
 @media only screen and (max-width: 600px) {
   .chats {
-      flex-direction: column;
+    flex-direction: column;
+  }
+  .sessions {
+    max-width: 100%;
   }
 }
