--- a/src/app/chat/admin-chat/admin-chat.component.html
+++ b/src/app/chat/admin-chat/admin-chat.component.html
@@ -1,12 +1,13 @@
-<section class="container" *ngIf="display">
+<section class="container admin" *ngIf="display">
     <header>
         <h1>Admin Chat</h1>
     </header>
 
     <div class="chats">
         <div class="sessions">
-            <div class='session' *ngFor='let session of chatSessions' (click)="getChatSession(session)">
-                <span>{{session}}</span>
+            <div class='session' *ngFor='let session of chatSessions; let i = index' (click)="getChatSession(session)">
+                <span>{{session | slice:0:5}}</span>
+                <mat-icon matBadge="X" *ngIf="showBadge(i)" (click)="onDeleteSession(session)" matBadgeColor="warn"></mat-icon>
             </div>
         </div>
         <div class="chat">
