Cloud notification added

--- a/src/app/chat/admin-chat/admin-chat.component.html
+++ b/src/app/chat/admin-chat/admin-chat.component.html
@@ -2,6 +2,9 @@
     <header>
         <h1>Admin Chat</h1>
     </header>
+    <div *ngIf='showNotificationButton()'>
+        <button (click)='enableNotification()'>Enable Notification</button>
+    </div>
 
     <div class="chats">
         <div class="sessions">
